fixed footer display issue, equipment descriptions and other text are now beautifully aligned #128

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,6 +2,8 @@
 @import "bootstrap_and_overrides";
 @import "jquery-ui-1.8.16.custom";
 
+$h3-line-height: 27px;
+
 .cart_reserver { margin-bottom: 7px; }
 .thumbnail {
   height: 420px;
@@ -12,4 +14,11 @@
   position: absolute;
   bottom: 13px;
   }
-.add_to_cart_box { @extend .caption}
+.add_to_cart_box { @extend .caption; }
+.equipment_title {
+	height: 2 * $h3-line-height;
+}
+.special-hr { 
+	margin-top: 4px;
+	margin-bottom: 10px;
+	}
